--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!-- Following guidance from
+    https://www.freecodecamp.org/news/how-to-create-a-portfolio-website-using-html-css-javascript-and-bootstrap/ 
+-->
+
 <head>
   <title>Portfolio Website-Eduardo</title>
   <meta charset="utf-8">
