--- a/index.html
+++ b/index.html
@@ -80,17 +80,17 @@
                 <div class="row mt-3">
                     <div class="col-md-6">
                         <ul>
-                            <li>Name: David Parker</li>
-                            <li>Age: 28</li>
-                            <li>Occupation: Web Developer</li>
+                            <li>Name: Eduardo Salazar</li>
+                            <li>Age: 25</li>
+                            <li>Occupation: Data Science Educator</li>
 
                         </ul>
                     </div>
                     <div class="col-md-6">
                         <ul>
-                            <li>Name: David Parker</li>
-                            <li>Age: 28</li>
-                            <li>Occupation: Web Developer</li>
+                            <li>Name: Eduardo Salazar</li>
+                            <li>Age: 25</li>
+                            <li>Occupation: Data Science Educator</li>
 
                         </ul>
                     </div>
